[regroupe les import en tête de code]

--- a/Netflix Data Analysis.ipynb
+++ b/Netflix Data Analysis.ipynb
@@ -20,11 +20,10 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
     "'''pip install wordcloud'''\n",
     "from wordcloud import WordCloud\n",
-    "import matplotlib.pyplot as plt\n",
-    "import numpy as np\n"
+    "import matplotlib.pyplot as plt, numpy as np, missingno as msno, re\n",
+    "\n"
    ]
   },
   {
@@ -677,7 +676,6 @@
     }
    ],
    "source": [
-    "import missingno as msno\n",
     "# Diagramme en barres\n",
     "# Chaque barre symbolise une colonne du jeu de données, leur hauteur correspond au taux de valeurs non nulles dans chaque colonne.\n",
     "msno.bar(df)"
@@ -1744,8 +1742,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import re\n",
-    "\n",
     "# # # Remplacer les valeurs NaN par 0\n",
     "# df.loc[df['type'] == 'TV Show', 'duration'] = df.loc[df['type'] == 'TV Show', 'duration'].fillna(0)\n",
     "\n",
@@ -1854,8 +1850,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import re\n",
-    "\n",
     "#  Gère la future dépréciation de fillna\n",
     "pd.set_option('future.no_silent_downcasting', True)\n",
     "# Remplacer les valeurs NaN par 0\n",
